progress towards static page

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-dark" style="background-color:#424242 !important">
   <a class="navbar-brand" href="index.html">
-    <img src="/icons/banner.png" width="30" height="30" alt="">
-    <!-- Free use icon from https://www.iconfinder.com/icons/531899/entertainment_mic_microphone_multimedia_music_sound_icon (CC BY-SA 3.0) -->
+    <img src="./icons/banner.png" width="30" height="30" alt="">
+    <!-- Free use icon from https://www.iconfinder.com./icons/531899/entertainment_mic_microphone_multimedia_music_sound_icon (CC BY-SA 3.0) -->
   </a>
 
   <button class="navbar-toggler ml-auto search-button" type="button" data-toggle="collapse"
           data-target="#search-inputs">
-    <img src="/icons/three-bars.svg" style="margin-bottom:2px"/>
+    <img src="./icons/three-bars.svg" style="margin-bottom:2px"/>
   </button>
 
   <div class="navbar-collapse collapse show" id="search-inputs">
@@ -62,10 +62,10 @@
       <div class="row justify-content-center d-none" id="button-container" style="margin-bottom:10px; margin-top:10px">
         <h5 class="col-auto" style="margin-top:7px">Play on:</h5>
         <button type="button" class="btn spotify-button col-auto" id="spotify-button" style="margin-right:5px">
-          <img class="spotify-logo" src="/icons/Spotify_Logo_RGB_White.png" alt="">
+          <img class="spotify-logo" src="./icons/Spotify_Logo_RGB_White.png" alt="">
         </button>
         <button type="button" class="btn yt-button col-auto" id="yt-button" onclick="">
-          <img class="yt-logo" src="/icons/yt_logo_mono_dark.png">
+          <img class="yt-logo" src="./icons/yt_logo_mono_dark.png">
         </button>
       </div>
 
@@ -90,11 +90,8 @@
 </div>
 
 
-<script src="api.js"></script>
-<script src="scripts.js"></script>
-<script>
-  window.LyricSearchController.init()
-</script>
+<!-- <script type="module" src="./api.js"></script> -->
+<script src="./scripts.js"></script>
 </body>
 
 </html>
