uncommented module tag

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </div>
 
 
-<!-- <script type="module" src="./api.js"></script> -->
+<script type="module" src="./api.js"></script>
 <script src="./scripts.js"></script>
 </body>
 
