--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 </div>
 
 
-<script type="module" src="./api.js"></script>
-<script src="./scripts.js"></script>
+<!-- <script src="api.js"></script> -->
+<script src="scripts.js"></script>
 </body>
 
 </html>
