--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lyric Search Front End</title>
 
-  <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 
-  <script src="/jquery.min.js"></script>
-  <script src="/bootstrap/bootstrap.min.js"></script>
+  <script src="jquery.min.js"></script>
+  <script src="bootstrap/bootstrap.min.js"></script>
 
 </head>
 
